--- a/File_Application/BE_Hmart/src/main/resources/application.properties
+++ b/File_Application/BE_Hmart/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.servlet.multipart.max-request-size=20MB
 # ===============================
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HFN;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Furniture_Sales;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=songlong
 
